# citelock

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2
eval/: contradiction_recall_cases.json  distractor_cases.json  labeled_cases.json  results_contra_recall_local.json  results_distractor_local.json  results_local.json  results_stub.json  run_eval.py
src/citelock/: __init__.py  cli.py  decompose.py  gate.py  hashing.py  ledger.py  policy.py  sanity.py  textutil.py  types.py
src/citelock/backends/: __init__.py  base.py  deberta.py  fixture.py  llm.py  stub.py
tests/: conftest.py  test_backends.py  test_cli.py  test_decompose.py  test_fixture_replay.py  test_gate.py  test_hashing_policy.py  test_ledger.py  test_llm_and_decompose_llm.py  test_relevance.py  test_sanity.py
tests/fixtures/: deberta_pairs.json
