[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citelock"
version = "0.1.0a2"
description = "A deterministic, fail-closed citation gate for RAG answers — not a fact-checker."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Hinano Hart" }]
keywords = ["rag", "citation", "faithfulness", "nli", "fail-closed", "guardrail", "hallucination"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5,<3",
    "syntok>=1.4.3",
    "python-ulid>=2.2",
    "blake3>=0.4",
]

[project.optional-dependencies]
# Local NLI backend (default model: cross-encoder/nli-deberta-v3-base, MIT).
# CPU-only is fully supported; no GPU required.
nli = [
    "torch>=2.0",
    "transformers>=4.36",
    "sentencepiece>=0.1.99",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/hinanohart/citelock"
Repository = "https://github.com/hinanohart/citelock"
Issues = "https://github.com/hinanohart/citelock/issues"

[project.scripts]
citelock = "citelock.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/citelock"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
packages = ["citelock"]
strict = true
warn_unused_ignores = true
# torch/transformers/sentence_transformers ship partial or no stubs.
[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "syntok.*", "blake3.*", "ulid.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
